--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
     "php": ">=7.2",
     "composer/installers": "v1.0.6",
     "dharmindersinghdhaliwal/wp-test-task": "1.0.0"
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 
 }
