--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": ">=7.2",
     "composer/installers": "v1.0.6",
-    "dharmindersinghdhaliwal/wp-test-task": "1.0.0"
+    "dharmindersinghdhaliwal/wp-test-task": "^1.0@dev"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
